Finalizado projeto para o SonarQube